fix: modal size on mobile fix 11

--- a/css/style.css
+++ b/css/style.css
@@ -2189,6 +2189,13 @@ template {
   }
 }
 
+@media (max-width: 430px) {
+  .modal__window {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
 @media (max-width: 400px) {
   .subscribe {
     width: 100%;
