--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -376,6 +376,12 @@
     &__input
       &-block
         flex-basis: 100%
+@media   ( max-width: 430px )
+  .modal
+    &__window
+      padding-left: 30px
+      padding-right: 30px
+
 @media   ( max-width: 400px )
   .subscribe
     width: 100%
